protocol version 1.3
refonte chromecast api

protocol version 1.2 :
upnp : fixage du port d'écoute udp

protocol version 1.1 :
Fix bug : exception lorsque que l'on clique sur annuler au choix du fichier
fix bug : ajout des images au jar

protocol version 1 :
Découverte et intéraction avec différents protocoles : upnp, airplay, chromecast
upnp : découverte et intéraction opérationnelles
airplay : découverte opérationnelle
chromecast : découverte et intéraction opérationnelles