@@ -1,8 +1,0 @@
-package druzy.protocol;
-
-import java.util.EventListener;
-
-public interface BridgeListener extends EventListener {
-
-	public void newMessage(BridgeEvent event);
-}
