@@ -4,7 +4,7 @@ import druzy.version.Version;
 
 public class Global {
 
-	public static final Version VERSION=new Version("1.3");
+	public static final Version VERSION=new Version("2");
 	
 	private Global() {}
 
