@@ -1,5 +1,8 @@
+protocoldruzy version 2
+protocol chromecast opérationnelle
+
 protocol version 1.3
-refonte chromecast api
+refonte de l'api chromecast
 
 protocol version 1.2 :
 upnp : fixage du port d'écoute udp
